fix: z-index value
z-index value was too large and was stacking over header when scrolled.

--- a/components/snackbar.css
+++ b/components/snackbar.css
@@ -41,7 +41,7 @@
   color: var(--text-color);
   font-size: var(--sp-16);
   box-shadow: 0 0px 2px 1px var(--text-color);
-  z-index: 9999;
+  z-index: 10;
 }
 
 .cross-icon {
